<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <LinearLayout
        android:id="@+id/createUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomBar">

        <EditText
            android:id="@+id/inputCreateName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/inputCreateName"
            android:textSize="14sp"
            android:inputType="textPersonName"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <EditText
            android:id="@+id/inputCreateLog"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/inputCreateLog"
            android:textSize="14sp"
            android:inputType="textPersonName"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <EditText
            android:id="@+id/inputCreatePass"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/inputCreatePass"
            android:textSize="14sp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/buttonAdd" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>