<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomBar">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:id="@+id/textLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <Button
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:id="@+id/buttonLog"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/buttonLog" />

        <Button
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone"
            android:text="@string/buttonExit" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <Button
            android:id="@+id/buttonSign"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/buttonSign"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>